Refactor resume content for clarity and conciseness; updated work experience descriptions, improved formatting, and enhanced technical details. Adjusted educational qualifications and certifications for consistency and accuracy.

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -109,31 +109,27 @@ Financial systems analyst specializing in financial systems, business analytics,
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Oct 2025} 
 \begin{itemize}
-<<<<<<< HEAD
-    \item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git) to enable daily forecasting cycles in place of biannual forecasts  
-    \item Programmatically built and maintained Planning Analytics OLAP database with 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across TM1 development, UAT, and production environments using a combination of MDX, SQL (joins, CTEs, cross applies), TurboIntegrator (TI), and TM1 rules  
-    \item Worked closely with VP of Asset Management and developed a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules—reducing forecast preparation time by 50\%
-    \item Converted the mortgage forecast model from Excel to TM1, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions, worked closely with the company controller; assumptions included home closings, loans funded, application and contract rates, loan expenses and fees
-    \item Designed dynamic, auto-refreshing dashboards and visualizations for financial managers, the CFO, and board members, replacing SSRS reports and significantly reducing board package preparation time by 75\%
-    \item Spearheaded newly implemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly internal audit reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
-    \item Troubleshot and fixed existing Excel forecast templates, using pivot tables, VLOOKUP/XLOOKUP, dynamic array functions, nested functions, and Power Query
-    \item Designed and automated ETL workflows to process P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting for financial reporting  
-    \item Oversaw Workiva and land proforma integrations with Planning Analytics, including configuring APIs and table mappings
-    \item Developed proof of concept exporting TM1 views to Power BI dashboards using Python (TM1py), REST API, and DAX
-    \item Maintained change logs and documentation for all TM1 processes, rules, and applications
-=======
-\item Built and automated IBM TM1/Planning Analytics TI processes and business rules, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git), enabling daily forecasting instead of biannual cycles.
-\item Programmatically maintained Planning Analytics OLAP database with 42 cubes, 88 dimensions, and supporting control objects, using MDX, SQL, TurboIntegrator (TI), and TM1 rules across dev, UAT, and production.
-\item Developed a land cash flow module with cost-to-complete spreads and payout schedules, cutting forecast preparation time by 50\%.
-\item Converted mortgage forecasting from Excel to Planning Analytics, improving calculation speed, granularity, and data integration; collaborated with the Controller to enhance accuracy of loan and headcount assumptions.
-\item Designed automated, interactive dashboards for financial managers and executives, replacing SSRS reports and reducing board package prep time by 75\%.
-\item Implemented and managed Git repository for TM1 processes, maintaining version control and SOX/ITGC compliance through automated audit scripts.
-\item Optimized Excel-based forecasting templates using Power Query, dynamic arrays, and nested functions to resolve calculation and refresh errors.
-\item Automated ETL pipelines for P\&L, SGM, GL, KPI, and budget data, improving data accuracy and reducing manual processing.
-\item Oversaw Workiva and Land Proforma integrations with TM1, configuring APIs and database mappings.
-\item Built proof of concept for TM1-to-Power BI export via Python (TM1py), REST API, and DAX for dynamic visualizations.
-\item Documented all Planning Analytics processes, rules, and applications to support governance and team onboarding.
->>>>>>> d6ba1669fa6955ce509213ef9f4cfee9b8de2952
+    \item Built and automated IBM TM1 / Planning Analytics TurboIntegrator (TI) processes and business rules, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git), enabling daily forecasting cycles instead of biannual forecasts.
+    
+    \item Programmatically maintained a Planning Analytics OLAP database consisting of 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across development, UAT, and production environments using MDX, SQL (joins, CTEs, cross applies), TurboIntegrator (TI), and TM1 rules.
+    
+    \item Partnered with the VP of Asset Management to develop a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules, reducing forecast preparation time by 50\%.
+    
+    \item Converted mortgage forecasting models from Excel to Planning Analytics, improving calculation speed and increasing granularity from business unit to project level; collaborated with the Controller to integrate personnel, headcount, and loan assumptions including closings, funded loans, application rates, contract rates, fees, and expenses.
+    
+    \item Designed dynamic, auto-refreshing dashboards and executive-level visualizations for financial managers, the CFO, and board members, replacing SSRS reports and reducing board package preparation time by 75\%.
+    
+    \item Implemented and managed a Git-based version control repository for TM1 processes and rules, enabling backup restoration and supporting SOX and ITGC audit compliance through automated Git Bash audit scripts.
+    
+    \item Troubleshot and optimized Excel-based forecasting templates using pivot tables, VLOOKUP/XLOOKUP, dynamic array formulas, nested functions, and Power Query to resolve calculation and refresh issues.
+    
+    \item Designed and automated ETL workflows for P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting.
+    
+    \item Oversaw integrations between Workiva, land proforma systems, and Planning Analytics, including API configuration and database table mappings.
+    
+    \item Developed a proof of concept exporting TM1 views to Power BI dashboards using Python (TM1py), REST APIs, and DAX to enable dynamic reporting.
+    
+    \item Maintained comprehensive documentation and change logs for all Planning Analytics processes, rules, and applications to support governance, audits, and team onboarding.
 \end{itemize}
 
 \vspace{1mm}
@@ -163,7 +159,7 @@ Financial systems analyst specializing in financial systems, business analytics,
 \textit{Master of Science in Agricultural and Applied Economics, GPA: 3.6/4.0} \hfill  \textit{May 2022}
 \begin{itemize}
 \item Relevant coursework: Causal Inference, Optimization, Econometrics I \& II, Production Economics, Machine Learning, Macro/Microeconomics.
-\item Tools and methods: R (tidyverse), Stata, MATLAB, Python, SAS, \LaTeX; econometric methods including OLS, IV, DiD, RDD, matching, and clustering.
+\item Tools and methods: R (tidyverse), Stata, MATLAB, Python, SAS, \LaTeX; econometric methods including ordinary least squares, instrumental variables, difference-in-difference, regression discontinuity design, matching, k-Nearest Neighbors, clustering.
 \end{itemize}
 
 \vspace{1mm}
@@ -224,7 +220,7 @@ Financial systems analyst specializing in financial systems, business analytics,
 \item Web Applications for Everybody Specialization \hfill Coursera, \textit{Oct 2023}\\
 \textit{Skills:} MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
 \item Applied Data Science with Python Specialization \hfill Coursera, \textit{Aug 2023}\\
-\textit{Skills:} Python (regex, Pandas, scikit-learn), ML algorithms (random forest, SVC, logistic regression, KNN, Na\"{i}ve Bayes, clustering)
+\textit{Skills:} Python (regex, Pandas, scikit-learn), ML algorithms (random forest, SVC, logistic regression, k-Nearest Neighbors, Na\"{i}ve Bayes, clustering)
 \item Django for Everybody Specialization \hfill Coursera, \textit{Jul 2023}\\
 \textit{Skills:} Django, SQLite, HTML5, CSS, JavaScript, Bash
 \item Probability Exam (SOA) \hfill Society of Actuaries, \textit{May 2023}
