Update resume content: refine ETL workflow descriptions for clarity and consistency; adjust PDF output details.

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -121,7 +121,7 @@ Financial Systems Analyst with expertise in financial planning platforms, busine
 \item Designed dynamic, auto-refreshing dashboards and executive-level visualizations for financial managers, the CFO, and board members, replacing SSRS reports and reducing board package preparation time by 75\%.
 \item Implemented and managed a Git-based version control repository for TM1 processes and rules, enabling backup restoration and supporting SOX and ITGC audit compliance through automated Git Bash audit scripts.
 \item Troubleshot and optimized Excel-based forecasting templates using pivot tables, VLOOKUP/XLOOKUP, dynamic array formulas, nested functions, and Power Query to resolve calculation and refresh issues.
-\item Designed and automated ETL workflows for P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting.
+\item Designed and automated ETL workflows for P\&L, SGM, GL, KPIs, statistical, and budget data, improving accuracy and efficiency in cash flow, KPIs, and milestone forecasting.
 \item Oversaw integrations between Workiva, land proforma systems, and TM1, including API configuration and database table mappings.
 \item Developed a proof of concept exporting TM1 views to Power BI dashboards using Python (TM1py), REST APIs, and DAX to enable dynamic reporting.
 \item Maintained comprehensive documentation and change logs for all TM1 processes, rules, and applications to support governance, audits, and team onboarding.
