Update resume content: refine work experience descriptions, enhance clarity, and improve formatting; add Koch Internship Program details and correct minor errors.

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -115,9 +115,9 @@ Financial Systems Analyst with expertise in financial planning platforms, busine
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Oct 2025} 
 \begin{itemize}
 \item Built and automated TM1 TurboIntegrator (TI) processes and business rules, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git), enabling daily forecasting cycles instead of biannual forecasts.
-\item Programmatically maintained a TM1 OLAP database consisting of 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across development, UAT, and production environments using MDX, SQL (joins, CTEs, cross applies), TI, and TM1 rules.
+\item Programmatically maintained a TM1 OLAP database consisting of 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across development, UAT, and production environments using MDX, SQL (joins, CTEs, cross applies), TIs, and TM1 rules.
 \item Partnered with the VP of Asset Management to develop a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules, reducing forecast preparation time by 50\%.
-\item Converted mortgage forecasting models from Excel to TM1, improving calculation speed and increasing granularity from business unit to project level; collaborated with the Controller to integrate personnel, headcount, and loan assumptions including closings, funded loans, application rates, contract rates, fees, and expenses.
+\item Converted mortgage forecasting models from Excel to TM1, improving calculation speed and increasing granularity from business unit to project level; collaborated with the Controller to integrate personnel, headcount, and loan assumptions including closings, funded loans, loan types, application rates, contract rates, fees, and expenses.
 \item Designed dynamic, auto-refreshing dashboards and executive-level visualizations for financial managers, the CFO, and board members, replacing SSRS reports and reducing board package preparation time by 75\%.
 \item Implemented and managed a Git-based version control repository for TM1 processes and rules, enabling backup restoration and supporting SOX and ITGC audit compliance through automated Git Bash audit scripts.
 \item Troubleshot and optimized Excel-based forecasting templates using pivot tables, VLOOKUP/XLOOKUP, dynamic array formulas, nested functions, and Power Query to resolve calculation and refresh issues.
@@ -163,7 +163,7 @@ Financial Systems Analyst with expertise in financial planning platforms, busine
 \vspace{1mm}
 \textbf{CEVRO Institute, School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{M.A. in Political Science, Philosophy, and Economics (PPE)} \hfill  \textit{Jun 2019}\\
-\textbf{Scholarship:} Full Tuition for Academic Excellence
+\textbf{Scholarship:} Full Tuition for Academic Excellence.
 
 \vspace{1mm}
 \textbf{University of Michigan, College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
@@ -200,6 +200,13 @@ Financial Systems Analyst with expertise in financial planning platforms, busine
 \end{itemize}
 
 \vspace{1mm}
+\textbf{Koch Internship Program} \hfill Online\\
+\textit{Intern} \hfill  \textit{Jan 2017 --- May 2017}
+\begin{itemize}
+\item In concurrence with the Commonwealth Foundation fellowship, developmental program included weekly seminars on economics, public policy, and career development.
+\end{itemize}
+
+\vspace{1mm}
 \textbf{Cato Institute} \hfill Washington, DC\\
 \textit{Research Intern, Center for Educational Freedom} \hfill \textit{Sep 2016 --- Dec 2016}
 \begin{itemize}
@@ -221,7 +228,7 @@ Financial Systems Analyst with expertise in financial planning platforms, busine
 \textit{Skills:} Python (regex, Pandas, scikit-learn), ML algorithms (random forest, SVC, logistic regression, k-Nearest Neighbors, Na\"{i}ve Bayes, clustering)
 \item Django for Everybody Specialization \hfill Coursera, \textit{Jul 2023}\\
 \textit{Skills:} Django, SQLite, HTML5, CSS, JavaScript, Bash
-\item Probability Exam (SOA) \hfill Society of Actuaries, \textit{May 2023}
+\item Passed: Probability Exam \hfill Society of Actuaries, \textit{May 2023}
 \item Laserfiche Gold \& Platinum Certifications \hfill Laserfiche, \textit{Oct 2022}
 \end{itemize}
 
