Update LimDon's resume: Adjust item spacing in LaTeX, enhance TM1 OLAP database description, and add new Excel course.

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -27,7 +27,7 @@
 % --- Bullet itemization ---
 % \renewcommand{\labelitemi}{\textopenbullet}
 % \renewcommand{\labelitemii}{\textbullet}
-\setlist[itemize]{noitemsep, nolistsep, leftmargin=2.5em}
+\setlist[itemize]{itemsep=1em, nolistsep, leftmargin=2.5em}
 
 \usepackage{marvosym}
 \usepackage{twemojis}
@@ -115,10 +115,10 @@ Financial Systems Analyst with expertise in financial planning platforms, busine
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Oct 2025} 
 \begin{itemize}
 \item Built and automated TM1 TurboIntegrator (TI) processes and business rules, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git), enabling daily forecasting cycles instead of biannual forecasts.
-\item Programmatically maintained a TM1 OLAP database consisting of 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across development, UAT, and production environments using MDX, SQL (joins, CTEs, cross applies), TIs, and TM1 rules.
+\item Programmatically maintained a TM1 OLAP database consisting of 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across development, UAT, and production environments using MDX, SQL (joins, CTEs, cross applies), TI's, and TM1 rules.
 \item Partnered with the VP of Asset Management to develop a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules, reducing forecast preparation time by 50\%.
 \item Converted mortgage forecasting models from Excel to TM1, improving calculation speed and increasing granularity from business unit to project level; collaborated with the Controller to integrate personnel, headcount, and loan assumptions including closings, funded loans, loan types, application rates, contract rates, fees, and expenses.
-\item Designed dynamic, auto-refreshing dashboards and executive-level visualizations for financial managers, the CFO, and board members, replacing SSRS reports and reducing board package preparation time by 75\%.
+\item Designed dynamic, auto-refreshing dashboards and executive-level visualizations for financial managers, the CFO, and board members, replacing SSRS reports, Excel data mart add-ons, and reducing board package preparation time by 75\%.
 \item Implemented and managed a Git-based version control repository for TM1 processes and rules, enabling backup restoration and supporting SOX and ITGC audit compliance through automated Git Bash audit scripts.
 \item Troubleshot and optimized Excel-based forecasting templates using pivot tables, VLOOKUP/XLOOKUP, dynamic array formulas, nested functions, and Power Query to resolve calculation and refresh issues.
 \item Designed and automated ETL workflows for P\&L, SGM, GL, KPIs, statistical, and budget data, improving accuracy and efficiency in cash flow, KPIs, and milestone forecasting.
@@ -222,6 +222,7 @@ Financial Systems Analyst with expertise in financial planning platforms, busine
 \begin{itemize}
 \item PostgreSQL for Everybody Specialization \hfill Coursera, \textit{May 2024}\\
 \textit{Skills:} PostgreSQL, DBeaver, NoSQL, Elasticsearch
+\item Excel Formulas \& Functions \hfill Maven Analytics, \textit{Oct 2023}
 \item Web Applications for Everybody Specialization \hfill Coursera, \textit{Oct 2023}\\
 \textit{Skills:} MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
 \item Applied Data Science with Python Specialization \hfill Coursera, \textit{Aug 2023}\\
